kubernetes/apps/main/opentoucan/grafana-instance/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opentoucan-grafana-instance
spec:
  hostnames: ["grafana.${DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: ${DOMAIN}-https
  rules:
    - backendRefs:
        - name: grafana
          namespace: opentoucan
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
